--- a/InternetCafe/InternetCafe.csproj
+++ b/InternetCafe/InternetCafe.csproj
@@ -47,6 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cafeteria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cafeteria.Designer.cs">
+      <DependentUpon>Cafeteria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cash.Designer.cs">
+      <DependentUpon>Cash.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,11 +81,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InternetCafeDataSet1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Options.cs">
+    <Compile Include="InternetCafeDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InternetCafeDataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="InternetCafeDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InternetCafeDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Members.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Options.Designer.cs">
-      <DependentUpon>Options.cs</DependentUpon>
+    <Compile Include="Members.Designer.cs">
+      <DependentUpon>Members.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Option.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Option.Designer.cs">
+      <DependentUpon>Option.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,9 +110,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Options.resx">
-      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -113,6 +138,28 @@
     <None Include="InternetCafeDataSet1.xss">
       <DependentUpon>InternetCafeDataSet1.xsd</DependentUpon>
     </None>
+    <None Include="InternetCafeDataSet2.xsc">
+      <DependentUpon>InternetCafeDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="InternetCafeDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InternetCafeDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InternetCafeDataSet2.xss">
+      <DependentUpon>InternetCafeDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="InternetCafeDataSet3.xsc">
+      <DependentUpon>InternetCafeDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="InternetCafeDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InternetCafeDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InternetCafeDataSet3.xss">
+      <DependentUpon>InternetCafeDataSet3.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -133,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
