--- a/InternetCafe/App.config
+++ b/InternetCafe/App.config
@@ -6,6 +6,9 @@
         <add name="InternetCafe.Properties.Settings.InternetCafeConnectionString"
             connectionString="Data Source=.;Initial Catalog=InternetCafe;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="InternetCafe.Properties.Settings.InternetCafeConnectionString1"
+            connectionString="Data Source=172.16.17.13;Initial Catalog=InternetCafe;User ID=sa;Password=101010"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
