--- a/InternetCafe/Properties/Settings.settings
+++ b/InternetCafe/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=.;Initial Catalog=InternetCafe;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="InternetCafeConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=172.16.17.13;Initial Catalog=InternetCafe;User ID=sa;Password=101010&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=172.16.17.13;Initial Catalog=InternetCafe;User ID=sa;Password=101010</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
