--- a/InternetCafe/InternetCafe.csproj
+++ b/InternetCafe/InternetCafe.csproj
@@ -101,6 +101,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InternetCafeDataSet5.xsd</DependentUpon>
     </Compile>
+    <Compile Include="InternetCafeDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InternetCafeDataSet6.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Members.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +208,17 @@
     </None>
     <None Include="InternetCafeDataSet5.xss">
       <DependentUpon>InternetCafeDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="InternetCafeDataSet6.xsc">
+      <DependentUpon>InternetCafeDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="InternetCafeDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>InternetCafeDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="InternetCafeDataSet6.xss">
+      <DependentUpon>InternetCafeDataSet6.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
