--- a/InternetCafe/App.config
+++ b/InternetCafe/App.config
@@ -6,7 +6,12 @@
         <add name="InternetCafe.Properties.Settings.InternetCafeConnectionString"
             connectionString="Data Source=.;Initial Catalog=InternetCafe;Integrated Security=True"
             providerName="System.Data.SqlClient" />
-        <add name="InternetCafe"
+        <add name="InternetCafe" connectionString="Data Source=172.16.17.23;Initial Catalog=InternetCafe;User ID=sa;Password=101010"
+            providerName="System.Data.SqlClient" />
+        <add name="InternetCafe.Properties.Settings.InternetCafeConnectionString1"
+            connectionString="Data Source=172.16.17.13;Initial Catalog=InternetCafe;User ID=sa;Password=101010"
+            providerName="System.Data.SqlClient" />
+        <add name="InternetCafe.Properties.Settings.InternetCafeConnectionString2"
             connectionString="Data Source=172.16.17.23;Initial Catalog=InternetCafe;User ID=sa;Password=101010"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
